@@ -4472,14 +4472,20 @@ class AstNew final : public AstNodeFTaskRef {
     // New as constructor
     // Don't need the class we are extracting from, as the "fromp()"'s datatype can get us to it
     bool m_isImplicit = false;  // Implicitly generated from extends args
+    bool m_isScoped = false;  // Had :: scope when parsed
 public:
-    AstNew(FileLine* fl, AstNodeExpr* pinsp)
-        : ASTGEN_SUPER_New(fl, "new", pinsp) {}
+    AstNew(FileLine* fl, AstNodeExpr* pinsp, bool isScoped = false)
+        : ASTGEN_SUPER_New(fl, "new", pinsp)
+        , m_isScoped{isScoped} {}
     ASTGEN_MEMBERS_AstNew;
+    void dump(std::ostream& str = std::cout) const override;
+    void dumpJson(std::ostream& str = std::cout) const override;
     bool sameNode(const AstNode* /*samep*/) const override { return true; }
     int instrCount() const override { return widthInstrs(); }
     bool isImplicit() const { return m_isImplicit; }
     void isImplicit(bool flag) { m_isImplicit = flag; }
+    bool isScoped() const { return m_isScoped; }
+    void isScoped(bool flag) { m_isScoped = flag; }
 };
 class AstTaskRef final : public AstNodeFTaskRef {
     // A reference to a task
